# whiten

./: .gitignore  CMakeLists.txt  glad.cpp  imgui.cpp  imgui.ini  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp  main.cpp
components/: compute_shader.h  renderer.h  ssbo.h  texture.h  ubo.h  vert_frag_shader.h  window.h
include/glad/: glad.h
include/imgui/: imgui.h  imgui_internal.h
shaders/: compute.comp  copy.comp  frag.frag  vertex.vert
